--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: starkos-com/landing
+  github: starkos-com/starkos-com
   instagram:
   linkedin:
   pinterest:
@@ -50,13 +50,13 @@ google_analytics: UA-173215798-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://starkos-com.github.io/landing/
+url: https://starkos-com.github.io/starkos-com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: https://starkos-com.github.io/landing/
+baseurl: https://starkos-com.github.io/starkos-com
 
 #
 # !! You don't need to change any of the configuration flags below !!
